--- a/src/app/components/modais/view/view.component.html
+++ b/src/app/components/modais/view/view.component.html
@@ -105,7 +105,7 @@
             <div class="col-12 col-md-12">
                 <div class="label">
                     <label>Descrição:</label>
-                    <textarea class="w-full field-textarea" pInputTextarea disabled style="resize: none;" [value]="form.message"></textarea>
+                    <textarea class="w-full field-textarea" pInputTextarea disabled style="resize: none; opacity: 0.9 !important;" [value]="form.message"></textarea>
                 </div>
             </div>
         </div>
