--- a/src/assets/style/forms/_input.scss
+++ b/src/assets/style/forms/_input.scss
@@ -20,12 +20,24 @@
   background: $white;
   border: 1px solid $grey2;
   border-radius: 50px;
-  font-size: 12px;
+  font-size: 20px;
   font-family: $font-family;
 }
 
 .p-inputtextarea.p-component {
   border-radius: 20px;
+}
+
+.field-textarea {
+  height: 150px;
+  width: 100%;
+  overflow: auto;
+  outline: none !important;
+  resize: none;
+  border: 1px solid #ced4da;
+  border-radius: 1rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 23px;
 }
 
 .input-to-label {
@@ -60,4 +72,8 @@
   input:disabled {
     color: #080808;
     opacity: 0.8 !important;
+  }
+
+  label {
+    font-size: 20px;
   }
