--- a/src/assets/style/_utils.scss
+++ b/src/assets/style/_utils.scss
@@ -35,6 +35,10 @@
     background-color: #27ff002e !important;
 }
 
+.birthday_wedding {
+    background-color: #ff00008c !important;
+}
+
 .prayer {
     background-color: #fbff0047 !important;
 }
