--- a/src/app/pages/avisos/form-avisos/form-avisos.component.html
+++ b/src/app/pages/avisos/form-avisos/form-avisos.component.html
@@ -15,8 +15,9 @@
                 <div class="col-12 col-md-6">
                     <div class="field">
                         <label>Tipo do Aviso: <span class="required">*</span></label>
-                        <p-dropdown placeholder="Selecione o tipo de aviso" optionLabel="tipo" optionValue="id" formControlName="tipo"
-                            styleClass="w-full" [options]="tipoAvisos" (onChange)="onChangeTipo($event)" [(ngModel)]="avisoForm.guestType"></p-dropdown>
+                        <p-dropdown placeholder="Selecione o tipo de aviso" optionLabel="tipo" optionValue="id"
+                            formControlName="tipo" styleClass="w-full" [options]="tipoAvisos"
+                            (onChange)="onChangeTipo($event)" [(ngModel)]="avisoForm.guestType"></p-dropdown>
                     </div>
                 </div>
                 <div class="col-12 col-md-6">
@@ -34,13 +35,15 @@
                     <div class="col-12 col-md-6">
                         <div class="field">
                             <label>Nome do Visitante: <span class="required">*</span></label>
-                            <input type="text" pInputText class="w-full" formControlName="visitante" [(ngModel)]="avisoForm.person.name" />
+                            <input type="text" pInputText class="w-full" formControlName="visitante"
+                                [(ngModel)]="avisoForm.person.name" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="field">
                             <label>Veio a convite de alguém?</label>
-                            <input type="text" pInputText class="w-full" formControlName="convidadoPor" [(ngModel)]="avisoForm.person.invitedBy">
+                            <input type="text" pInputText class="w-full" formControlName="convidadoPor"
+                                [(ngModel)]="avisoForm.person.invitedBy">
                         </div>
                     </div>
                 </div>
@@ -51,12 +54,12 @@
                             <div class="d-flex align-items-center cp-h">
                                 <div class="d-flex align-items-center mr-5">
                                     <input formControlName="frenquentaIgreja" type="radio" name="frenquentaIgreja"
-                                        [value]="true" id="op1" [(ngModel)]="avisoForm.person.church.attend"/>
+                                        [value]="true" id="op1" [(ngModel)]="avisoForm.person.church.attend" />
                                     <label for="op1">Sim</label>
                                 </div>
 
                                 <div class="d-flex align-items-center ml-5">
-                                    <input formControlName="frenquentaIgreja" type="radio" name="frenquentaIgreja" 
+                                    <input formControlName="frenquentaIgreja" type="radio" name="frenquentaIgreja"
                                         [(ngModel)]="avisoForm.person.church.attend" [value]="false" id="op2" />
                                     <label for="op2">Não</label>
                                 </div>
@@ -66,29 +69,24 @@
                     <div class="col-12 col-md-6" *ngIf="avisoForm?.person?.church?.attend">
                         <div class="field">
                             <label>Nome da Igreja: </label>
-                            <input type="text" pInputText class="w-full" formControlName="igreja" [(ngModel)]="avisoForm.person.church.name">
+                            <input type="text" pInputText class="w-full" formControlName="igreja"
+                                [(ngModel)]="avisoForm.person.church.name">
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- TIPO ANIVERSÁRIO -->
+            <!-- TIPO ANIVERSÁRIO VIDA -->
             <div *ngIf="selectedTipo === 3">
                 <div class="row mt-4">
                     <div class="col-12 col-md-3">
                         <div class="field">
                             <label>Tipo de Aniversário: <span class="required">*</span></label>
                             <div class="d-flex align-items-center cp-h">
-                                <div class="d-flex align-items-center mr-5">
-                                    <input formControlName="tipoAniversário" type="radio" name="tipoAniversário"
-                                        value="WEDDING" id="op1" [(ngModel)]="avisoForm.person.birthday.type" />
-                                    <label for="op1">Casamento</label>
-                                </div>
-
                                 <div class="d-flex align-items-center ml-5">
                                     <input formControlName="tipoAniversário" type="radio" name="tipoAniversário"
-                                        value="LIFE" id="op2" [(ngModel)]="avisoForm.person.birthday.type" />
-                                    <label for="op2">Vida</label>
+                                        value="LIFE" id="op1" [(ngModel)]="avisoForm.person.birthday.type" checked />
+                                    <label for="op1">Vida</label>
                                 </div>
                             </div>
                         </div>
@@ -96,13 +94,48 @@
                     <div class="col-12 col-md-3">
                         <div class="field">
                             <label>Quantos anos?: <span class="required">*</span></label>
-                            <input type="text" mask="00" pInputText class="w-full" formControlName="idade" [(ngModel)]="avisoForm.person.birthday.age">
+                            <input type="text" mask="00" pInputText class="w-full" formControlName="idade"
+                                [(ngModel)]="avisoForm.person.birthday.age">
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="field">
-                            <label>Nome do Casal ou Aniversariante: <span class="required">*</span></label>
-                            <input type="text" pInputText class="w-full" formControlName="aniversariante" [(ngModel)]="avisoForm.person.name">
+                            <label>Nome Aniversariante: <span class="required">*</span></label>
+                            <input type="text" pInputText class="w-full" formControlName="aniversariante"
+                                [(ngModel)]="avisoForm.person.name">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- TIPO ANIVERSÁRIO CASAMENTO-->
+            <div *ngIf="selectedTipo === 6">
+                <div class="row mt-4">
+                    <div class="col-12 col-md-3">
+                        <div class="field">
+                            <label>Tipo de Aniversário: <span class="required">*</span></label>
+                            <div class="d-flex align-items-center cp-h">
+                                <div class="d-flex align-items-center mr-5">
+                                    <input formControlName="tipoAniversário" type="radio" name="tipoAniversário"
+                                        value="WEDDING" checked id="op1" [(ngModel)]="avisoForm.person.birthday.type" />
+                                    <label for="op1">Casamento</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-3">
+                        <div class="field">
+                            <label>Quantos anos?: <span class="required">*</span></label>
+                            <input type="text" pInputText class="w-full" formControlName="idade"
+                                [(ngModel)]="avisoForm.person.birthday.age">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="field">
+                            <label>Nome do Casal: <span class="required">*</span></label>
+                            <input type="text" pInputText class="w-full" formControlName="aniversariante"
+                                [(ngModel)]="avisoForm.person.name">
                         </div>
                     </div>
                 </div>
@@ -114,31 +147,35 @@
                     <div class="col-12 col-md-6">
                         <div class="field">
                             <label>Nome de Solicitante:</label>
-                            <input type="text" pInputText class="w-full" formControlName="nomePedido" [(ngModel)]="avisoForm.prayer.to">
+                            <input type="text" pInputText class="w-full" formControlName="nomePedido"
+                                [(ngModel)]="avisoForm.prayer.to">
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="field">
                             <label>Oração para: </label>
-                            <input type="text" pInputText class="w-full" formControlName="oracaoPara" [(ngModel)]="avisoForm.prayer.from">
+                            <input type="text" pInputText class="w-full" formControlName="oracaoPara"
+                                [(ngModel)]="avisoForm.prayer.from">
                         </div>
                     </div>
                 </div>
             </div>
-            
+
             <!-- TIPO APRESENTAÇÃO CRIANÇA -->
             <div *ngIf="selectedTipo === 5">
                 <div class="row mt-4">
                     <div class="col-12 col-md-6">
                         <div class="field">
                             <label>Nome dos Pais: <span class="required">*</span></label>
-                            <input type="text" pInputText class="w-full" formControlName="pais" [(ngModel)]="avisoForm.presentation.parents">
+                            <input type="text" pInputText class="w-full" formControlName="pais"
+                                [(ngModel)]="avisoForm.presentation.parents">
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="field">
                             <label>Nome da Criança: <span class="required">*</span></label>
-                            <input type="text" pInputText class="w-full" formControlName="crianca" [(ngModel)]="avisoForm.presentation.children">
+                            <input type="text" pInputText class="w-full" formControlName="crianca"
+                                [(ngModel)]="avisoForm.presentation.children">
                         </div>
                     </div>
                 </div>
@@ -157,10 +194,12 @@
             <div class="col-12 mt-4">
                 <div class="row">
                     <div class="col-12 col-md-2 mb-3">
-                        <p-button styleClass="w-full p-button-outlined" (onClick)="backGrid($event)" label="Voltar"></p-button>
+                        <p-button styleClass="w-full p-button-outlined" (onClick)="backGrid($event)"
+                            label="Voltar"></p-button>
                     </div>
                     <div class="col-12 col-md-2">
-                        <p-button styleClass="w-full" (onClick)="onSave()" label="Enviar" [disabled]="form.invalid" [loading]="laoding[0]"></p-button>
+                        <p-button styleClass="w-full" (onClick)="onSave()" label="Enviar" [disabled]="form.invalid"
+                            [loading]="laoding[0]"></p-button>
                     </div>
                 </div>
             </div>
