--- a/src/app/components/modais/view/view.component.html
+++ b/src/app/components/modais/view/view.component.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-12 col-md-6" *ngIf="form.person?.church?.attend">
                     <div class="label">
-                        <label>Pertence a Igreja:</label>
+                        <label>Nome da Igreja:</label>
                         <input pInputText [value]="form?.person?.church?.name" disabled class="w-full" />
                     </div>
                 </div>
