--- a/src/app/pages/historico/historico.component.html
+++ b/src/app/pages/historico/historico.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<base-content *ngIf="telaState == 'grid'">
+<base-content>
   <div class="col-12">
     <div class="row">
       <div class="col-12 col-md-12">
@@ -15,10 +15,10 @@
 
   <div class="col-12">
     <div class="row">
-      <div class="col-12" *ngIf="canAdd">
+      <div class="col-12">
         <div class="row">
           <div class="mb-3 col-12 col-md-4 d-md-block">
-            <p-button label="Exportar" (onClick)="addAviso()"></p-button>
+            <p-button label="Exportar" (onClick)="export()"></p-button>
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
               <ng-template pTemplate="body" let-aviso>
                 <tr [ngClass]="aviso.class">
                   <td>{{ aviso.guestTypeDesc }}</td>
-                  <td>{{ aviso.createdDate }}</td>
+                  <td>{{ aviso.createdAt }}</td>
                   <td>
                     <div class="col-8 d-flex">
                       <div>
@@ -69,5 +69,7 @@
 </base-content>
 
 <app-modal-view #mview [title]="title" [form]="aviso" labelPrimaryButton="Não Lido" labelSecondButton="Excluir" page="historico"
-  (onPrimaryClick)="closeModal(aviso)">
+  (onPrimaryClick)="closeModal(aviso)" (onSecondClick)="confirmDelete(aviso.id)">
 </app-modal-view>
+
+<app-confirm-dialog></app-confirm-dialog>
