--- a/src/app/pages/avisos/avisos.component.html
+++ b/src/app/pages/avisos/avisos.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-12 col-md-12">
         <div class="">
-          <h2 class="d-md-block text-center text-md-left">Tabela de Avisos!</h2>
+          <h2 class="d-md-block text-center text-md-left">Avisos</h2>
         </div>
       </div>
       <div class="col-12 d-md-block">
@@ -18,7 +18,7 @@
       <div class="col-12" *ngIf="canAdd">
         <div class="row">
           <div class="mb-3 col-12 col-md-4 d-md-block">
-            <p-button label="Adicionar Aviso" (onClick)="addAviso()"></p-button>
+            <p-button label="Adicionar Aviso" icon="pi pi-plus" (onClick)="addAviso()"></p-button>
           </div>
         </div>
       </div>
