--- a/src/app/pages/avisos/avisos.component.html
+++ b/src/app/pages/avisos/avisos.component.html
@@ -76,6 +76,6 @@
   <app-form-avisos [data]="formAviso" (onBack)="back($event)"></app-form-avisos>
 </div>
 
-<app-modal-view #mview [title]="title" [form]="aviso" labelPrimaryButton="Marcar como lido e fechar"
-  (onPrimaryClick)="closeModal(aviso)">
+<app-modal-view #mview [title]="title" [form]="aviso" labelPrimaryButton="Lido" labelSecondButton="Fechar"
+  (onPrimaryClick)="readAviso(aviso.id)" (onSecondClick)="closeModal()">
 </app-modal-view>
