--- a/src/app/pages/eventos/form-evento/form-eventos.component.html
+++ b/src/app/pages/eventos/form-evento/form-eventos.component.html
@@ -14,19 +14,26 @@
             <div class="row mt-2">
                 <div class="col-12 col-md-6">
                     <div class="field">
-                        <label>Data:</label>
-                        <p-calendar styleClass="w-full" formControlName="data" appendTo="body" dateFormat="dd/mm/yy"
-                            placeholder="DD/MM/AAAAA" inputId="data" [(ngModel)]="avisoForm.date"></p-calendar>
+                        <label>Departamento: <span style="color: red;">*</span></label>
+                        <p-dropdown placeholder="Selecione o departamento" optionLabel="department" optionValue="department"
+                            formControlName="departamento" styleClass="w-full" [options]="departaments"
+                            [(ngModel)]="eventoForm.departamentName"></p-dropdown>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="field">
+                        <label>Data: <span style="color: red;">*</span></label>
+                        <p-calendar styleClass="w-full" formControlName="data" appendTo="body" dateFormat="dd/mm/yy" [showTime]="true" 
+                            [touchUI]="true" placeholder="DD/MM/AAAAA HH:mm" inputId="data" [(ngModel)]="eventoForm.eventDate"></p-calendar>
                     </div>
                 </div>
             </div>
-
             <div class="row mt-4">
                 <div class="col-12 col-md-12">
                     <div class="field">
-                        <label>Descrição: </label>
+                        <label>Evento: <span style="color: red;">*</span></label>
                         <textarea maxlength="100" class="field-textarea w-full" name="message" formControlName="message"
-                            [(ngModel)]="avisoForm.message">
+                            [(ngModel)]="eventoForm.eventName">
                     </textarea>
                     </div>
                 </div>
