--- a/src/app/pages/aniversarios/aniversarios.component.html
+++ b/src/app/pages/aniversarios/aniversarios.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="col-12">
-        <div class="row">
+        <div class="row" *ngIf="canAdd">
             <div class="col-12 mb-3 col-md-4">
                 <p-button label="Adicionar Aniversariante" icon="pi pi-plus" (onClick)="addBirthday()"></p-button>
             </div>
@@ -29,21 +29,22 @@
                         <tr>
                             <th>Nome</th>
                             <th>Aniversário</th>
-                            <!-- <th>Ações</th> -->
+                            <th>Idade</th>
+                            <th>Ações</th>
                         </tr>
                     </ng-template>
                     <ng-template pTemplate="body" let-birthday>
                         <tr>
                             <td>{{ birthday.name }}</td>
                             <td>{{ birthday.birthday | date: 'dd/MM/YYYY' }}</td>
-                            <!-- <td>
-                                <div class="row">
-                                    <div class="col-12 col-md-6">
-                                        <p-button styleClass="w-full" icon="pi pi-pencil" label="Editar"
-                                            (onClick)="editBirthday(birthday)"></p-button>
-                                    </div>
+                            <td>{{ birthday.age }}</td>
+                            <td>
+                                <div class="col-12 col-md-6 mb-3" *ngIf="canAdd">
+                                    <p-button styleClass="w-full dep-border-color-red dep-color-red p-button-outlined"
+                                        icon="pi pi-trash" label="Remover"
+                                        (onClick)="confirmDelete(birthday)"></p-button>
                                 </div>
-                            </td> -->
+                            </td>
                         </tr>
                     </ng-template>
                 </p-table>
